2002-11-14  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (variable_defined): Thinko.
	* lib/Automake/ConditionalSet.pm (true): Simplify.
	(permutations): Fix documentation.
	(new): Don't simplify conditional sets that contain TRUE.
	Reported by Raja R Harinath.

2002-11-14  Eric Blake  <ebb9@email.byu.edu>

	* lib/am/depend2.am: Add missing fi in c.obj rules.

2002-11-14  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (handle_installdirs): Reindent to workaround a
	parsing bug in Perl 5.6.0.
	Reported by Patrick Welche.

	* lib/Automake/Conditional.pm: Add reference to ConditionalSet.pm.
	* lib/Automake/ConditionalSet.pm: New file.
	* lib/Automake/Makefile.am (dist_perllib_DATA): Add ConditionalSet.pm.
	* automake.in: Use ConditionalSet.
	(by_condition, invert_conditions, variable_conditions_permutations):
	Remove, now defined as Automake::ConditionalSet::by_condition,
	Automake::ConditionalSet::invert, and
	Automake::ConditionalSet::permutations.
	(variable_sorted_conditions): Remove.
	(msg_var, msg_target handle_source_transform, handle_lib_objects,
	conditional_ambiguous_p, variable_not_always_defined_in_cond,
	macro_define, macro_dump, variable_defined,
	variable_conditions_recursive, variable_conditions,
	target_conditions, variable_conditionally_defined,
	variable_conditions_recursive_sub,
	check_variable_defined_unconditionally, variable_value_as_list,
	variable_value_as_list_recursive_worker, variable_output,
	variable_pretty_output, rule_define, append_exeext,
	am_install_var, require_variables_for_macro): Adjust to
	use ConditionalSet.

2002-11-13  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (variable_conditions): Split into ...
	(variable_conditions, variable_sorted_conditions): ... these
	functions, where variable_sorted_conditions has the semantic of
	the old variable_condition.
	(target_conditions): New function.
	(msg_var, handle_lib_objects_cond, check_ambiguous_conditional,
	variable_not_always_defined_in_cond, macro_define,