@@ -1,3 +1,11 @@
+2002-11-15  Alexandre Duret-Lutz  <adl@gnu.org>
+
+	* lib/Automake/ConditionalSet.pm (_permutations_worker): Ignore TRUE
+	conditions.
+	(permutations): Treat empty permutations as TRUE.
+	(invert): Simplify.
+	Suggested by Raja R Harinath.
+
 2002-11-14  Alexandre Duret-Lutz  <adl@gnu.org>
 
 	* automake.in (variable_defined): Thinko.
